feat-major : user's preferences implemented
