# app/Http/Resources/Api/DropDown/AuthorResource.php
@@ -1,0 +1,41 @@
+<?php
+
+namespace App\Http\Resources\Api\DropDown;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+/**
+ * @OA\Schema(
+ *     title="AuthorResource",
+ *     description="Author Resource",
+ *     type="object",
+ *     @OA\Property(
+ *         property="id",
+ *         type="integer",
+ *         description="ID of the Author",
+ *         example=1
+ *     ),
+ *     @OA\Property(
+ *         property="name",
+ *         type="string",
+ *         description="Name of the Author",
+ *         example="John Doe"
+ *     )
+ * )
+ */
+class AuthorResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'name' => $this->name,
+        ];
+    }
+}
